Add styles for the webpage, add alt text for the images

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,73 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-  </head>
-  <body>
-    <!-- #region Header  -->
-    <header class="header">
-      <h1 class="main_title text-center">Exploring Git: Version ContSamsung BAR Plusrol Made Simple</h1>
-      <div class="main_description text-center">
-        Dive into the world of Git, the distributed version control system
-        revolutionizing software development. Discover what Git is, why it's
-        indispensable for developers, and the powerful concept of branching that
-        enhances collaboration and innovation. Whether you’re a beginner or
-        looking to refine your skills, this guide provides key insights into
-        managing code efficiently and effectively.
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wireframe</title>
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+  <!-- #region Header  -->
+  <header class="header">
+    <h1 class="main_title text-center">Exploring Git: Version ContSamsung BAR Plusrol Made Simple</h1>
+    <div class="main_description text-center">
+      Dive into the world of Git, the distributed version control system
+      revolutionizing software development. Discover what Git is, why it's
+      indispensable for developers, and the powerful concept of branching that
+      enhances collaboration and innovation. Whether you’re a beginner or
+      looking to refine your skills, this guide provides key insights into
+      managing code efficiently and effectively.
+    </div>
+  </header>
+  <!-- #endregion Header  -->
+
+  <!-- #region Main  -->
+  <main class="wrapper">
+    <article class="article-block">
+      <img src="./images/git_banner.png" alt="Git banner" class="article-block_img">
+      <div class="article-block_info">
+        <h2 class="article-block_title">What is Git?</h2>
+        <div class="article-block_description">Git is a distributed version control system designed to help developers
+          manage changes to source code during software development. Created by Linus Torvalds in 2005, Git enables
+          teams to track revisions, collaborate on projects, and maintain a history of modifications. Unlike centralized
+          version control systems, Git allows each developer to have a complete local copy of the entire repository,
+          making it fast and efficient. With features like branching, merging, and conflict resolution, Git provides
+          developers with powerful tools to enhance productivity and ensure code integrity throughout the development
+          lifecycle.</div>
+        <a href="#" class="article-block_button">Read more</a>
       </div>
-    </header>
-    <!-- #endregion Header  -->
-
-    <!-- #region Main  -->
-<main class="wrapper">
-  <article class="article-block">
-    <img src="./images/git_banner.png" alt="" class="article-block_img1">
-    <h2 class="article-block_title">What is Git?</h2>
-    <div class="article-block_description">Git is a distributed version control system designed to help developers manage changes to source code during software development. Created by Linus Torvalds in 2005, Git enables teams to track revisions, collaborate on projects, and maintain a history of modifications. Unlike centralized version control systems, Git allows each developer to have a complete local copy of the entire repository, making it fast and efficient. With features like branching, merging, and conflict resolution, Git provides developers with powerful tools to enhance productivity and ensure code integrity throughout the development lifecycle.</div>
-    <button class="article-block_button">Read more</button>
-  </article>
-  <article class="article-block">
-    <img src="./images/devs_team.jpg" alt="" class="article-block_img1">
-    <h2 class="article-block_title">Why do developers need Git?</h2>
-    <div class="article-block_description">Developers need Git for several compelling reasons. First and foremost, Git enhances collaboration by allowing multiple developers to work on the same project simultaneously without interfering with each other's code. It also maintains a comprehensive history of changes, making it easy to track and revert to previous versions when necessary. Additionally, Git facilitates code review and quality assurance processes through features like branching and pull requests. By using Git, developers can streamline their workflows, reduce the risk of errors, and improve overall project management, ultimately leading to more efficient and successful software development.</div>
-    <button class="article-block_button">Read more</button>
-  </article>
-  <article class="article-block">
-    <img src="./images/git_branch.jpg" alt="" class="article-block_img1">
-    <h2 class="article-block_title">What is a branch in Git?</h2>
-    <div class="article-block_description">A branch in Git is a parallel version of the repository that allows developers to work on features or fixes independently from the main codebase, typically referred to as the "main" or "master" branch. Branching enables developers to isolate their work, experiment with new ideas, and collaborate without affecting the stability of the main project. Once the work on a branch is complete, it can be merged back into the main branch, integrating the changes into the primary codebase. This powerful feature of Git fosters a more organized development process, encouraging innovation while maintaining a clean and stable project history.</div>
-    <button class="article-block_button">Read more</button>
-  </article>
-
-
-</main>
-    <!-- #endregion Main  -->
-
-    <!-- #region Footer  -->
-    <footer class="footer text-center">
-      <div class="footer_info">
-        More information about Git can be found
-        <a href="https://git-scm.com/" target="_blank">here</a>
+    </article>
+    <article class="article-block">
+      <img src="./images/devs_team.jpg" alt="Working with GIT as a team" class="article-block_img">
+      <div class="article-block_info">
+        <h2 class="article-block_title">Why do developers need Git?</h2>
+        <div class="article-block_description">Developers need Git for several compelling reasons. First and foremost,
+          Git enhances collaboration by allowing multiple developers to work on the same project simultaneously without
+          interfering with each other's code. It also maintains a comprehensive history of changes, making it easy to
+          track and revert to previous versions when necessary. Additionally, Git facilitates code review and quality
+          assurance processes through features like branching and pull requests. Developers can streamline their
+          workflows, reduce the risk of errors, and improve overall project management, ultimately leading to more
+          efficient software development.</div>
+        <a href="#" class="article-block_button">Read more</a>
       </div>
-      <div class="footer_copyright-block">
-        &copy; Copyright - 2024. Created by
-        <a
-          href="https://github.com/nadika-zavodovska"
-          target="_blank"
-          class="copyright_link"
-          aria-label="Open github of author's of website"
-          >Nadika</a
-        >
-        with love 🤍
+    </article>
+    <article class="article-block">
+      <img src="./images/git_branch.jpg" alt="GIT and branches" class="article-block_img">
+      <div class="article-block_info">
+        <h2 class="article-block_title">What is a branch in Git?</h2>
+        <div class="article-block_description">A branch in Git is a parallel version of the repository that allows
+          developers to work on features or fixes independently from the main codebase, typically referred to as the
+          "main" or "master" branch. Branching enables developers to isolate their work, experiment with new ideas, and
+          collaborate without affecting the stability of the main project. Once the work on a branch is complete, it can
+          be merged back into the main branch, integrating the changes into the primary codebase. This powerful feature
+          of Git fosters a more organized development process, encouraging innovation while maintaining a clean and
+          stable project history.</div>
+        <a href="#" class="article-block_button">Read more</a>
       </div>
-    </footer>
-    <!-- #endregion Footer  -->
+    </article>
+  </main>
+  <!-- #endregion Main  -->
+
+  <!-- #region Footer  -->
+  <footer class="footer text-center">
+    <div class="footer_info">
+      More information about Git can be found
+      <a href="https://git-scm.com/" target="_blank">here</a>
+    </div>
+    <div class="footer_copyright-block">
+      &copy; Copyright - 2024. Created by
+      <a href="https://github.com/nadika-zavodovska" target="_blank" class="copyright_link"
+        aria-label="Open github of author's of website">Nadika</a>
+      with love 🤍
+    </div>
+  </footer>
+  <!-- #endregion Footer  -->
 </body>
 </html
