--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,8 +14,44 @@
   </header>
   <main>
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+
+    <div>
+      <label for="name">Name</label>
+      <input type="text" id="name">
+    </div>
+
+    <div>
+      <label for="email">Email</label>
+      <input type="email" id="email">
+    </div>
+
+    <div>
+      <label for="color">Color</label>
+      <select name="color" id="color">
+        <option value="white">White</option>
+        <option value="black">Black</option>
+        <option value="red">Red</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="size">Size</label>
+      <select name="size" id="size">
+        <option value="xs">XS</option>
+        <option value="s">S</option>
+        <option value="m">M</option>
+        <option value="l">L</option>
+        <option value="xl">XL</option>
+        <option value="xxl">XXL</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="delivery-date">Delivery Date</label>
+      <input type="date">
+    </div>
+
+    <button type="submit">Submit</button>
   </form>
 
   </main>
