--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Product Pick</h1>
-  </header>
-  <main>
-  <form>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>My form exercise</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Product Pick</h1>
+    </header>
+    <main>
+      <form>
+        <div>
+          <label for="name">Name</label>
+          <input type="text" id="name" />
+        </div>
 
-    <div>
-      <label for="name">Name</label>
-      <input type="text" id="name">
-    </div>
+        <div>
+          <label for="email">Email</label>
+          <input type="email" id="email" />
+        </div>
 
-    <div>
-      <label for="email">Email</label>
-      <input type="email" id="email">
-    </div>
+        <div>
+          <label for="color">Color</label>
+          <select name="color" id="color">
+            <option value="white">White</option>
+            <option value="black">Black</option>
+            <option value="red">Red</option>
+          </select>
+        </div>
 
-    <div>
-      <label for="color">Color</label>
-      <select name="color" id="color">
-        <option value="white">White</option>
-        <option value="black">Black</option>
-        <option value="red">Red</option>
-      </select>
-    </div>
+        <div>
+          <label for="size">Size</label>
+          <select name="size" id="size">
+            <option value="xs">XS</option>
+            <option value="s">S</option>
+            <option value="m">M</option>
+            <option value="l">L</option>
+            <option value="xl">XL</option>
+            <option value="xxl">XXL</option>
+          </select>
+        </div>
 
-    <div>
-      <label for="size">Size</label>
-      <select name="size" id="size">
-        <option value="xs">XS</option>
-        <option value="s">S</option>
-        <option value="m">M</option>
-        <option value="l">L</option>
-        <option value="xl">XL</option>
-        <option value="xxl">XXL</option>
-      </select>
-    </div>
+        <div>
+          <label for="delivery-date">Delivery Date</label>
+          <input type="date" />
+        </div>
 
-    <div>
-      <label for="delivery-date">Delivery Date</label>
-      <input type="date">
-    </div>
-
-    <button type="submit">Submit</button>
-  </form>
-
-  </main>
-  <footer>
-    <!-- change to your name-->
-    <h2>By Rashaad Ebrahim</h2>
-  </footer>
-</body>
-
+        <button type="submit">Submit</button>
+      </form>
+    </main>
+    <footer>
+      <!-- change to your name-->
+      <h2>By Rashaad Ebrahim</h2>
+    </footer>
+  </body>
 </html>
