Wrapped content in a <div class="container"> for better layout structure; added styles for container to set width and center it

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,15 +15,17 @@
     />
   </head>
   <body>
-    <header>
-      <h1>Product Pick</h1>
-    </header>
-    <main>
-      <form></form>
-    </main>
-    <footer>
-      <!-- change to your name-->
-      <h2>By HOMEWORK SOLUTION</h2>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>Product Pick</h1>
+      </header>
+      <main>
+        <form></form>
+      </main>
+      <footer>
+        <!-- change to your name-->
+        <h2>By HOMEWORK SOLUTION</h2>
+      </footer>
+    </div>
   </body>
 </html>
