Add customer name input with minlength validation

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,9 +13,9 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+  <form id="tshirt-order-form">
+      <label for="name">Full name:</label>
+      <input type="name" id="name" name="name" minlength="2" required placeholder="Enter your full name">
   </form>
 
   </main>
