--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,6 +16,9 @@
   <form id="tshirt-order-form">
       <label for="name">Full name:</label>
       <input type="name" id="name" name="name" minlength="2" required placeholder="Enter your full name">
+      <label id="email"> Email Address:</label>
+      <input type="email" id="email" name="email" required placeholder="Ennter your email">
+      
   </form>
 
   </main>
