--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,7 +18,15 @@
       <input type="name" id="name" name="name" minlength="2" required placeholder="Enter your full name">
       <label id="email"> Email Address:</label>
       <input type="email" id="email" name="email" required placeholder="Ennter your email">
+      <label for="color">Choose a T-shirt Color:</label>
+      <select id="color" name="color" required>
+        <option value="" disabled selected> Select a color</option>
+        <option value="pink">Pink</option>
+        <option value="green">Green</option>
+        <option value="black">Black</option>
+      </select>
       
+
   </form>
 
   </main>
