Add t-shirt size dropdown with 6 size options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -25,7 +25,16 @@
         <option value="green">Green</option>
         <option value="black">Black</option>
       </select>
-      
+      <label for="size">Choose a Size:</label>
+      <select id="size" name="size" required>
+        <option value="" disabled selected>Select a size</option>
+        <option value="XS">XS</option>
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        <option value="XL">XL</option>
+        <option value="XXL">XXL</option>
+      </select>
 
   </form>
 
