--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,4 +11,4 @@
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
