Add delivery date input with date validation

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -35,6 +35,9 @@
         <option value="XL">XL</option>
         <option value="XXL">XXL</option>
       </select>
+      <label for="delivery-date">Delivery Date:</label>
+      <input type="date" id=""delivery-date" name=""delivery-date" required min="2024-10-11" max="2024-11-01">
+      
 
   </form>
 
