--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,8 +16,10 @@
   <form id="tshirt-order-form">
       <label for="name">Full name:</label>
       <input type="name" id="name" name="name" minlength="2" required placeholder="Enter your full name">
+
       <label id="email"> Email Address:</label>
       <input type="email" id="email" name="email" required placeholder="Ennter your email">
+
       <label for="color">Choose a T-shirt Color:</label>
       <select id="color" name="color" required>
         <option value="" disabled selected> Select a color</option>
@@ -25,6 +27,7 @@
         <option value="green">Green</option>
         <option value="black">Black</option>
       </select>
+
       <label for="size">Choose a Size:</label>
       <select id="size" name="size" required>
         <option value="" disabled selected>Select a size</option>
@@ -35,16 +38,19 @@
         <option value="XL">XL</option>
         <option value="XXL">XXL</option>
       </select>
+
       <label for="delivery-date">Delivery Date:</label>
       <input type="date" id=""delivery-date" name=""delivery-date" required min="2024-10-11" max="2024-11-01">
-      
+
+      <button type="submit">Submit Order</button>
+
 
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Prati Amalden</h2>
   </footer>
 </body>
 
