Updated contact e-mail link and CSS styling

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <img src="wireframe.png">
-    <h2>What is git?</h2>
-    <p>Git is a version control software that allows developers to create and manage different versions of a project.</p>
-    <h2>Why do developers need git?</h2>
-    <p>Developers use git to handle large and small projects more efficiently track changes in the source code</p>
-    <h2>What is branch in git?</h2>
-    <p>Branches are for experimentation to try out difference styles with different branch names. E.g. try-purple or try-blue to experiment different colour themes. They may share some commonality in history and content but may vary in others.</p>
+    <h1>Github for dummies.</h1>
+    <h3>Everything you need to know about git.</h3>
+    <div class="top">
+      <img src="https://www.bleepstatic.com/content/hl-images/2022/04/08/GitHub__headpic.jpg?rand=1406588496" id="github-top-img">  
+      <h2>What is Git?</h2>
+      <p>Git is a version control software that allows developers to create and manage different versions of a project.</p>
+      <button>READ MORE</button>
+    </div>
+    <div class="bottom">
+      <div id="bottom-left">
+        <img src="https://images.javatpoint.com/tutorial/git/images/git-benefits.png" id="github-bottom-left-img">
+        <h2>Why do developers need git?</h2>
+        <p>Developers use git to handle large and small projects more efficiently track changes in the source code</p>
+        <button>READ MORE</button>
+      </div>
+      <div id="bottom-right">
+        <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*K9scAx1Ezd-KJFabaYseCw.jpeg" id="github-bottom-right-img">
+        <h2>What is branch in git?</h2>
+        <p>Branches are for experimentation to try out difference styles with different branch names. E.g. try-purple or try-blue to experiment different colour themes. They may share some commonality in history and content but may vary in others.</p>
+        <button>READ MORE</button>
+      </div>
+    </div>
+    <footer>
+      <h2>For more information please contact me on <a href="mailto:matthew.lt.law@gmail.com">MATTHEW.LT.LAW@GMAIL.COM</a></h2>
+    </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
