--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
     <h1>Github for dummies.</h1>
     <h3>Everything you need to know about git.</h3>
+    </header>
     <div class="top">
       <img src="https://www.bleepstatic.com/content/hl-images/2022/04/08/GitHub__headpic.jpg?rand=1406588496" id="github-top-img">  
       <h2>What is Git?</h2>
