Fixing PR Feedback Issues
-Remove Border Radius
-Add padding to around articles content
-Rename CSS class to reflect it purpose

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -36,7 +36,10 @@
       <a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank" class="button">Read More</a>
     </article>
 
-    <div id="other-article-title">
+
+    <div id="other-articles-container">
+      <br>
+      
       <article class="article-two-three-width">
         <h2>Why do developers need Git?</h2>
         <p class="section-content">
@@ -49,7 +52,7 @@
           More</a>
       </article>
 
-      <article class="article-two-three-width">
+      <article class="article-two-three-width" id="article-three-section-leftmargin">
         <h2>What is a branch in Git?</h2>
         <p class="section-content">
           A branch in Git is simply a lightweight movable pointer to snapshot of changes (commits) in the code base.<br>
@@ -57,9 +60,8 @@
           main. Only changes that have been agreed upon by the team is merged into the main branch.
           Collaborators/Developers will cut out from main to an experimental/feature branch to their development work.
         </p>
-        <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank"
-        class="button" id="btn-format">Read More</a>
-
+        <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank" class="button"
+          id="btn-format">Read More</a>
       </article>
 
     </div>
@@ -67,9 +69,10 @@
   </main>
   <!-- Footer Section -->
   <footer id="footer">
-    <p>Learning and Exploring Web Development Skills at Code Your Future.</p>
+    <p>Learning and Exploring Web Development Skills at Code Your Future.<br>
 
-    <p><strong>&copy; 2024</strong></p>
+      <strong>&copy; 2024</strong>
+    </p>
 
   </footer>
 
