--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,48 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+    <main class="wrapper">
+      <header> 
+        <h1 id="header">A Beginner's Guid to Git</h1>
+        <p id="header-description"> Uncover the power of Git, a vital tool for developers. </p>
+      </header>
+
+      <section>
+        <article class="article1">
+          <img src="images/git.webp" alt="article about Git" >
+          <h3>What is Git</h3>
+          <p>Git is a distributed version control system that allows developers to track changes in their codebase...</p>
+          <button class="btn-more">Read more</button>
+        </article>
+        <div class="article-container">
+          <article>
+            <img src="images/GIT1024x585.jpg" alt="git" width="400">
+            <h3>Why do developers need Git?</h3>
+            <p>There are several advantages to using it:</p>
+            <ul>
+              <li>Change management</li>
+              <li>Easier collaboration</li>
+              <li>Security</li>
+            </ul>
+            <button class="btn-more">Read more</button>
+
+          
+          </article>
+          <article>
+            <img src="images/branch.webp" alt="branch in git" width="400">
+            <h3>What is a branch in Git?</h3>
+            <p>Branches are a key concept in Git. They allow developers to work on different features or patches without disturbing the main branch</p>
+            <button class="btn-more">Read more</button>
+
+          </article>
+        </div>
+      </section>
+
+      <footer>
+        created by Samira Hekmati
+      </footer>
+    </main>
+    
+   
+  </body>
 </html>
