--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -20,7 +20,7 @@
         <legend>Your Details:</legend>
           <label for="user-name">
               Name:
-              <input id="name" type="text" name="name" id="user-name" placeholder="Enter name" minlength="3" required>
+              <input id="name" type="text" name="name" id="user-name" placeholder="Enter name" minlength="2" required>
             </label> <br /><br />
           <label for="user-email">
             Email:
@@ -37,20 +37,32 @@
              <option value="green">Green</option>
              <option value="yellow">Yellow</option>
           </select><br /><br />
-      <label for="choice">
+      <p>
           Pick Size:
-      </label><br /> <br />
-          <input id="choice" type="checkbox" name="choice" value="xs" checked> XS <br />
-          <input type="checkbox" name="size" value="s"> S <br />
-          <input type="checkbox" name="size" value="m"> M <br />
-          <input type="checkbox" name="size" value="l"> L <br />
-          <input type="checkbox" name="size" value="xl"> XL <br />
-          <input type="checkbox" name="size" value="xxl"> XXL <br /><br />
-      <label>
+      </p>
+        <label for="size-xs">
+          <input style="margin: .60em" id="size-xs" type="checkbox" name="size" value="extra-small" checked> XS <br />
+        </label>
+          <label for="size-s">
+            <input style="margin: .60em" id="size-s" type="checkbox" name="size" value="small"> S <br />
+          </label>
+          <label for="size-m">
+            <input style="margin: .60em" id="size-m" type="checkbox" name="size" value="medium"> M <br />
+          </label>
+          <label for="size-l">
+            <input style="margin: .60em" id="size-l" type="checkbox" name="size" value="large"> L <br />
+          </label>
+          <label for="size-xl">
+            <input style="margin: .60em" id="size-xl" type="checkbox" name="size" value="extra-large"> XL <br />
+          </label>
+          <label for="size-xxl">
+            <input style="margin: .60em" id="size-xxl" type="checkbox" name="size" value="extra-extra-large"> XXL <br /><br />
+          </label>
+      <label for="delivery-date">
         Delivery Date:
-      </label for="del-date">
-        <input id="del-date" class="date" type="date" name="delivery" required><br /><br />
-        <button type="submit">Submit</button> 
+      </label>
+        <input id="delivery-date" class="date" type="date" name="delivery" max="2024-10-31" required><br /><br />
+        <button class="btn" type="submit">Submit</button> 
     </fieldset>
   </form>
   </main>
