--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -15,14 +15,14 @@
 
       <section>
         <article class="article1">
-          <img src="images/git.webp" alt="article about Git" >
+          <img src="images/git.webp" alt="article about Git" class="article1-img">
           <h3>What is Git</h3>
           <p>Git is a distributed version control system that allows developers to track changes in their codebase...</p>
           <button class="btn-more">Read more</button>
         </article>
-        <div class="article-container">
-          <article>
-            <img src="images/GIT1024x585.jpg" alt="git" width="400">
+        <section class="article-container">
+          <div>
+            <img src="images/GIT1024x585.jpg" alt="git" width="300">
             <h3>Why do developers need Git?</h3>
             <p>There are several advantages to using it:</p>
             <ul>
@@ -33,15 +33,15 @@
             <button class="btn-more">Read more</button>
 
           
-          </article>
-          <article>
-            <img src="images/branch.webp" alt="branch in git" width="400">
+          </div>
+          <div>
+            <img src="images/branch.webp" alt="branch in git" width="300">
             <h3>What is a branch in Git?</h3>
             <p>Branches are a key concept in Git. They allow developers to work on different features or patches without disturbing the main branch</p>
             <button class="btn-more">Read more</button>
 
-          </article>
-        </div>
+          </div>
+        </section>
       </section>
 
       <footer>
