adding css to the form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,7 +13,7 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form action="reesults.html" method="GET">
+  <form class="form" action="reesults.html" method="GET">
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
      <div>
@@ -56,8 +56,8 @@
      </div>
 
      <div>
-      <button type="submit">Submit</button>
-      <button type="reset">Reset</button>
+      <button type="submit" id="submit">Submit</button>
+      <button type="reset" id="reset">Reset</button>
      </div>
   </form>
 
