--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
 </head>
 <body>
@@ -16,13 +18,13 @@
   </header>
   <main>
   <form id="tshirt-order-form">
-      <label for="name">Full name:</label>
+      <label for="name"><i class="fas fa-user"></i> Full name:</label>
       <input type="name" id="name" name="name" minlength="2" required placeholder="Enter your full name">
 
-      <label id="email"> Email Address:</label>
+      <label id="email"><i class="fas fa-envelope"></i> Email Address:</label>
       <input type="email" id="email" name="email" required placeholder="Ennter your email">
 
-      <label for="color">Choose a T-shirt Color:</label>
+      <label for="color"><i class="fas fa-tshirt"></i>  Choose a T-shirt Color:</label>
       <select id="color" name="color" required>
         <option value="" disabled selected> Select a color</option>
         <option value="pink">Pink</option>
@@ -30,7 +32,7 @@
         <option value="black">Black</option>
       </select>
 
-      <label for="size">Choose a Size:</label>
+      <label for="size"><i class="fas fa-ruler-combined"></i> Choose a Size:</label>
       <select id="size" name="size" required>
         <option value="" disabled selected>Select a size</option>
         <option value="XS">XS</option>
@@ -41,7 +43,7 @@
         <option value="XXL">XXL</option>
       </select>
 
-      <label for="delivery-date">Delivery Date:</label>
+      <label for="delivery-date"><i class="fas fa-calendar-alt"></i> Delivery Date:</label>
       <input type="date" id=""delivery-date" name=""delivery-date" required min="2024-10-11" max="2024-11-01">
 
       <button type="submit">Submit Order</button>
