update information in each title its article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,66 +26,86 @@
       </div>
       <h2>What is Git</h2>
       <p class="overlay">
-        Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
-        covered!
-        Web developers perform important functions, like creating websites, maintaining the back-end of applications and
-        running tests, to ensure sites' continued functionality. A role as a junior developer can be a great way to
-        learn
-        the basics of the industry and begin a career in website development. If you're interested in becoming a junior
-        developer, it's helpful to learn more about the position and the steps needed to begin your career.
+        By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively
+        maintained open source project originally developed in 2005 by Linus Torvalds, the famous creator of the Linux
+        operating system kernel.<br><br>
+
+        A staggering number of software projects rely on Git for version control, including commercial projects as well
+        as open source. Developers who have worked with Git are well represented in the pool of available software
+        development talent and it works well on a wide range of operating systems and IDEs (Integrated Development
+        Environments).<br><br>
+
+        Having a distributed architecture, Git is an example of a DVCS (hence Distributed Version Control System).
+        Rather than have only one single place for the full version history of the software as is common in once-popular
+        version control systems like CVS or Subversion (also known as SVN), in Git, every developer's working copy of
+        the code is also a repository that can contain the full history of all changes.
       </p>
-      <button onclick="window.open('https://www.atlassian.com/git/tutorials/what-is-git', '_blank')">Read More</button>
+      <button onclick="window.open('https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F', '_blank')">Read
+        More</button>
     </section>
     <section class="wrapper">
       <article class="article-wrapper">
         <div>
           <img src="/Wireframe/img/git.jpg" alt="image of git" class="img-article">
         </div>
-        <h2>What is Git</h2>
+        <h2>Why do developers need Git?</h2>
         <p class="overlay">
-          Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
-          covered!
-          Web developers perform important functions, like creating websites, maintaining the back-end of applications
-          and
-          running tests, to ensure sites' continued functionality. A role as a junior developer can be a great way to
-          learn
-          the basics of the industry and begin a career in website development. If you're interested in becoming a
-          junior
-          developer, it's helpful to learn more about the position and the steps needed to begin your career.
+          Developers need Git because it is a vital tool for version control that facilitates efficient collaboration,
+          organization, and management of code. As software projects become more complex, keeping track of changes and
+          coordinating work among multiple team members becomes challenging. Git addresses these issues by allowing
+          developers to create branches for their work, enabling them to make changes independently without affecting
+          the main codebase. This branching strategy helps avoid conflicts and allows for experimentation with new
+          features.<br><br><br>
+
+          One of the significant advantages of Git is its ability to track changes over time. Each modification made to
+          the code is recorded in a commit, which includes a message describing the change. This history enables
+          developers to understand the evolution of the project and makes it easy to identify when and why specific
+          changes were made. If a bug is introduced, Git allows for quick reversion to a previous state, minimizing
+          disruption.
         </p>
-        <button onclick="window.open('https://www.atlassian.com/git/tutorials/what-is-git', '_blank')">Read More</button>
+        <button onclick="window.open('https://www.coursera.org/articles/what-is-git', '_blank')">Read
+          More</button>
       </article>
 
       <article class="article-wrapper">
         <div>
           <img src="/Wireframe/img/git.png" alt="image of git" class="img-article">
         </div>
-        <h2>What is Git</h2>
+        <h2>What is a branch in Git?</h2>
         <p class="overlay">
-          Are you interested in a career as a web developer but are not sure how to start preparing for it? We have you
-          covered!
-          Web developers perform important functions, like creating websites, maintaining the back-end of applications
-          and
-          running tests, to ensure sites' continued functionality. A role as a junior developer can be a great way to
-          learn
-          the basics of the industry and begin a career in website development. If you're interested in becoming a
-          junior
-          developer, it's helpful to learn more about the position and the steps needed to begin your career.
+          In Git, a branch is a separate line of development that allows developers to work on different features, bug
+          fixes, or experiments independently from the main codebase. This isolation enables parallel development,
+          letting multiple developers create branches for their tasks without affecting one another’s progress. Each
+          branch maintains its own commit history, making it easy to track changes specific to that branch while keeping
+          the main branch stable. This structure enhances efficiency, especially in collaborative environments where
+          teams can simultaneously develop new features.<br><br>
+
+          Once development on a branch is complete, it can be merged back into the main branch. Git offers robust
+          merging tools that facilitate combining changes while addressing any conflicts that arise from simultaneous
+          modifications. This ensures cohesive project evolution, integrating contributions from various developers.
+          Branching strategies, such as feature branching and hotfix branches, further streamline development by
+          organizing work clearly. Overall, branches are crucial for effective version control, enabling teams to
+          innovate while preserving code integrity.
         </p>
-        <button onclick="window.open('https://www.atlassian.com/git/tutorials/what-is-git', '_blank')">Read More</button>
+        <button onclick="window.open('https://www.javatpoint.com/git-branch', '_blank')">Read
+          More</button>
       </article>
     </section>
   </main>
   <footer>
     <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"></i></p>
     <div class="social">
-      <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+      <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"><i
+          class="fa-brands fa-facebook"></i></a>
       <a class="twitter" href="https://twitter.com/explore" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4" target="_blank"><i
+          class="fa-brands fa-youtube"></i></a>
+      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es" target="_blank"><i
+          class="fa-brands fa-instagram"></i></a>
       <a class="github" href="https://github.com/Grajales-K" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
   </footer>
 
 </body>
+
 </html>
