--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,9 +12,11 @@
       <h1>Understanding Git</h1>
       <p>A developer's guide to Git, its purpose, and branching.</p>
   </header>
-  <section id="articles">
+<!-- Main Article Section -->
+  <main> 
+  <section class="articles">
     <!-- First article about Git -->
-    <article class="featured-article">
+    <article>
         <img src="git.png" alt="Git Logo">
         <h2>What is Git?</h2>
         <p>Git is a distributed version control system used to track changes in source code during software development. It helps developers collaborate, manage projects, and maintain a history of every change made in the codebase.</p>
@@ -36,10 +38,11 @@
     </article>
 </div>
 </section>
+</main>
 <footer>
   <p>Git basic instructions</p>
 </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
