--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,16 +14,13 @@
   </header>
   <main>
     <form action="#" method="post">
-      <div class="container">
-        <div>
-        <label for="username">Username:</label>
-      <input type="text" id="username" name="username" value="user123" required>
+        <div class="username-container">
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" value="user123" required>
       </div>
-      <div>
+
         <label for="password">Password:</label>
       <input type="password" id="password" name="password" value="password123" required>
-      </div>
-      <div>
         
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
