adds username container class

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,9 +15,9 @@
   <main>
     <form action="#" method="post">
       <div class="container">
-        <div>
-        <label for="username">Username:</label>
-      <input type="text" id="username" name="username" value="user123" required>
+        <div class="username-container">
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" value="user123" required>
       </div>
       <div>
         
