--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git instructions</title>
+    <title>Wireframe</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -20,29 +20,30 @@
         <img src="git.png" alt="Git Logo">
         <h2>What is Git?</h2>
         <p>Git is a distributed version control system used to track changes in source code during software development. It helps developers collaborate, manage projects, and maintain a history of every change made in the codebase.</p>
-        <a href="#">Read More</a>
+        <a href=""https://www.novelvista.com/blogs/devops/git-an-important-devops-tool" target="_blank"">Read More</a>
     </article>
-  <div class="article-grid">
-      <!-- Article: Why do developers need Git? -->
+ <!-- Second Article Section -->
+      
       <article>
-          <img src="developers.png" alt="Developers Collaboration">
+          <img src="dropbox.png" alt="Developers Collaboration">
           <h2>Why do developers need Git?</h2>
           <p>Git allows developers to collaborate on projects more efficiently, enabling teams to work on the same code simultaneously without overwriting each other's changes. It also provides a safety net to roll back to previous versions if needed.</p>
-          <a href="#">Read More</a>
+          <a href="https://marklodato.github.io/visual-git-guide/index-en.html" target="_blank">Read More</a>
       </article>
+ <!-- Third Article Section -->
+
       <article>
-        <img src="branch.png" alt="Git Branch">
+        <img src="gmail.png" alt="Git Branch">
         <h2>What is a branch in Git?</h2>
         <p>A branch in Git is a separate line of development. Developers create branches to work on new features or bug fixes independently from the main codebase. Once the work is completed, the branch can be merged back into the main project.</p>
-        <a href="#">Read More</a>
+        <a href="https://www.getdbt.com/analytics-engineering/transformation/git-workflow" target="_blank">Read More</a>
     </article>
-</div>
+
 </section>
 </main>
 <footer>
   <p>Git basic instructions</p>
 </footer>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    
 </body>
 </html>
