--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <meta name="description" content="Git Introduction">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="./img/logo-title.png">
+    <title>Git</title>
   </head>
   <body>
         <header>
