change password lenght

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,7 +18,7 @@
     <form action="#" method="post">
       <div class="username-container">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" value="user123" required>
+        <input type="text" id="username" name="username" value="user123" required minlength="2">
       </div>
 
       <div>
