make the html tags

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,20 +15,20 @@
   <main>
   <form action="results.html" method="get">
     <div>
-      <label>Name</label>
-      <input name="name">
+      <label for="name">Name</label>
+      <input name="name" type="text" id="name" >
     </div>
     <div>
-      <label>Email address</label>
-      <input name="Email address">
+      <label for="email">Email address</label>
+      <input name="Email address" type="email" id="email">
     </div>
     <div>
       <label>Color</label>
-      <input>
+      <input name="colour">
   </div>
   <div>
       <label>Size</label>
-      <input>
+      <input name="size">
   </div>
 
     <button>Submit</button>
