--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -10,7 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"></noscript>
 
 
 </head>
@@ -23,7 +24,7 @@
       <label for="name"><i class="fas fa-user"></i> Full name:</label>
       <input type="name" id="name" name="name" minlength="2" required placeholder="Enter your full name">
 
-      <label id="email"><i class="fas fa-envelope"></i> Email Address:</label>
+      <label for="email"><i class="fas fa-envelope"></i> Email Address:</label>
       <input type="email" id="email" name="email" required placeholder="Ennter your email">
 
       <label for="color"><i class="fas fa-tshirt"></i>  Choose a T-shirt Color:</label>
@@ -46,7 +47,7 @@
       </select>
 
       <label for="delivery-date"><i class="fas fa-calendar-alt"></i> Delivery Date:</label>
-      <input type="date" id=""delivery-date" name=""delivery-date" required min="2024-10-11" max="2024-11-01">
+      <input type="date" id="delivery-date" name="delivery-date" required min="2024-10-11" max="2024-11-01">
 
       <button type="submit">Submit Order</button>
 
