--- a/index.html
+++ b/index.html
@@ -1,57 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Learning HTML and CSS</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-  	<div class = "title">
-  		<h1>Git</h1>
-		<p>This webpage will answer these 3 questions.</p>
-		<p>What is Git?</p>
-		<p>Why do developers need Git?</p>
-		<p>What is a branch in Git?</p>
-	</div>
-		
-	<main>
-		<div class="parent">
-		    <div> <img src = "git.png" alt = "git logo" class = "center">
-	    	<article>
-			<h3>What is Git?</h3>
-				<p>Git basically takes a picture of what all your files look like at that moment and stores a reference to that snapshot.</p>
-			<nav><a href = "https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target = "_blank">Read more</a></nav>
-			</article>
-			</div>    
-		</div>
-	</main>
+    <meta name="description" content="About Git">
+    <meta name="author" content="Mohammed Aslam">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Git</title>
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>About Git</h1>
+    </header>
 
-<section>
-	<div class="parent1">
-    	<div>
-    		<img src = "developers.png" alt = "git logo"  class  = "img1">
-			<article>
-			<h3>Why do developers need Git?</h3>
-			<p>Git is the most commonly used version control system. Git tracks the changes you make to files, so you have a record of what has been done, and you can revert to specific versions should you ever need to. Git also makes collaboration easier, allowing changes by multiple people to all be merged into one source.</p>
-			<nav><a href = "https://git-scm.com/about/branching-and-merging" target = "_blank">Read more</a></nav>
-			</article>
-		</div>
-    	
-    	<div>
-    		<img src = "gitbranch.png" alt = "git logo" width = "100%">
-			<article>
-			<h3>What is a branch in Git?</h3>
-			<p>A branch in Git is simply a lightweight movable pointer to one of these commits. The default branch name in Git is master. As you start making commits, you're given a master branch that points to the last commit you made. Every time you commit, the master branch pointer moves forward automatically.</p>
-			
-			<nav><a href = "https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target = "_blank">Read more</a></nav>
-			</article>
-		</div>
-</div>
-</section>
-  <footer>
-  <p>© 2024 Mohammed Aslam</p>
-</footer>
-  	
-  </body>
+<main>
+        <section class="grid-container">
+            <article class="article">
+                <img class="centered" src="git.avif" alt="Description of Image 1" width = "640" height = "380">
+                <h2>What is Git?</h2>
+                <p>Git basically takes a picture of what all your files look like at that moment and stores a reference to that snapshot.</p>
+               	<a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target = "_blank">Read more to find out what Git is</a>
+            </article>
+            <article class="article">
+                <img src="developer.webp" alt="Description of Image 2" width = "640" height = "380">
+                <h2>Why do developers need Git?</h2>
+                <p>Git is the most commonly used version control system. Git tracks the changes you make to files, so you have a record of what has been done, and you can revert to specific versions should you ever need to.</p>
+                <a href = "https://git-scm.com/about/branching-and-merging" target = "_blank">Read More to find out why developers need Git</a>
+            </article>
+            <article class="article">
+                <img src="gitbranch.webp" alt="Description of Image 3" width = "640" height = "380">
+                <h2>What is a branch in Git?</h2>
+                <p>A branch in Git is simply a lightweight movable pointer to one of these commits. The default branch name in Git is master. As you start making commits, you're given a master branch that points to the last commit you made. Every time you commit, the master branch pointer moves forward automatically.</p>
+                <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target = "_blank">Read more to find out what a branch is</a>
+            </article>
+        </section>
+    </main>
+
+
+    <footer>
+        <p>Mohammed Aslam</p>
+    </footer>
+</body>
 </html>
