wireframe header no style

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <div id="wrapper">
+        <div id="header">
+          <img src="https://dl.dropbox.com/s/c9uo5ph2eh66yfg/github.png" alt="Github Logo">
+          <h1>Git Basics</h1>
+          <div id="navigation">
+            <ul>
+              <li><a href="#">What is git?</a></li>
+              <li><a href="#">What is Github?</a></li>
+              <li><a href="#">How do you use git and Github?</a></li>
+              <li><a href="#">More resources</a></li>
+            </ul>
+          </div>
+          <!-- end of navigation -->
+        </div>
+        <!-- end of header -->
 </body>
 </html
