--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <!-- Add your HTML markup here -->
+
+    <header>
+      <h1>Page Title</h1>
+      <p>And Short Description</p>
+    </header>
+    
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
