Add images to Articles two and three
Add images to Articles two and three

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,8 +18,6 @@
   <header>
     <h1>Version Control System</h1>
     <p>One of the most popular Version control systems tools in use today is called <strong><em>Git</em></strong>.
-
-
     </p>
   </header>
   <main>
@@ -39,8 +37,10 @@
 
     <div id="other-articles-container">
       <br>
-      
       <article class="article-two-three-width">
+        <div>
+          <img src="./Images/git-workflow.png" alt="Git-workflow-image" class="article-two-three-image-size">
+        </div>
         <h2>Why do developers need Git?</h2>
         <p class="section-content">
           Developers need Git because it helps with source code management and collaboration. Git allows multiple
@@ -53,6 +53,9 @@
       </article>
 
       <article class="article-two-three-width" id="article-three-section-leftmargin">
+        <div id="article-first-child-title">
+          <img src="./Images/git-branch.png" alt="Git-branch-image" class="article-two-three-image-size">
+        </div>
         <h2>What is a branch in Git?</h2>
         <p class="section-content">
           A branch in Git is simply a lightweight movable pointer to snapshot of changes (commits) in the code base.<br>
