--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -24,5 +24,48 @@
           <!-- end of navigation -->
         </div>
         <!-- end of header -->
+        <div id="main">
+          <div id="sidebar">
+            <h2>What is Git?</h2>
+            <p>Git is a version control system; you can think of it as a series of snapshots (commits) of your code base. With the creation of each snapshot you built out a whole application, seeing the growth of a full app. During this time you can make branches
+              to experiment and come back to a previous snapshot you took or merge those experiments into your app.</p>
+            <h2>What is GitHub?</h2>
+            <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere using those code snapshots that you took during development.</p>
+          </div>
+          <!-- end of sidebar -->
+          <div id="main_content">
+            <div id="row_1">
+              <div class="column">
+                <h3>Git init</h3>
+                <p><span class="emph">Git init</span> is the act of registering this current code base.</p>
+              </div>
+              <div class="column">
+                <h3>Git add</h3>
+                <p><span class="emph">Git add</span> is how we stage the integration of our current code base into our current list of snapshots.</p>
+              </div>
+              <div class="column">
+                <h3>Git status</h3>
+                <p><span class="emph">Git status</span> allows us to see the changes we are going to make.</p>
+              </div>
+            </div>
+            <div id="row_2">
+              <div class="column">
+                <h3>Git commit</h3>
+                <p><span class="emph">Git commit</span>; finally we can commit those changes we added to our last snapshot giving us a new snapshot of our code with whatever new changes were made.</p>
+              </div>
+              <div class="column">
+                <h3>Git remote add</h3>
+                <p><span class="emph">Git remote add</span> is used to set up an online repository where we can place all of our current code. This is where the outside world can see our code base.</p>
+              </div>
+            </div>
+            <div id="row_3">
+              <h3>Git push</h3>
+              <p><span class="emph">Git push</span> is how we get our code to Github, an excellent place to store all of our repositories. Other developers might look at our existing projects to see how we approached problems, pull down our code and add new features,
+                or even update our code base with feature they wanted to add.</p>
+            </div>
+          </div>
+          <!-- end of main content -->
+        </div>
+        <!-- end of main -->
 </body>
 </html
