Made a section for the footer

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -67,5 +67,11 @@
           <!-- end of main content -->
         </div>
         <!-- end of main -->
+        <div id="footer">
+          <p>You can learn more about Git and Github here: <a href="#">Github Guides</a></p>
+        </div>
+        <!-- end of footer -->
+      </div>
+      <!-- end of wrapper -->
 </body>
 </html
