--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,17 +16,18 @@
       <form>
         <div>
           <label for="name">Name</label>
-          <input type="text" id="name" />
+          <input type="text" id="name" required/>
         </div>
 
         <div>
           <label for="email">Email</label>
-          <input type="email" id="email" />
+          <input type="email" id="email" required/>
         </div>
 
         <div>
           <label for="color">Color</label>
-          <select name="color" id="color">
+          <select name="color" id="color" required>
+            <option value="">Select one</option>
             <option value="white">White</option>
             <option value="black">Black</option>
             <option value="red">Red</option>
@@ -35,7 +36,8 @@
 
         <div>
           <label for="size">Size</label>
-          <select name="size" id="size">
+          <select name="size" id="size" required>
+            <option value="">Select one</option>
             <option value="xs">XS</option>
             <option value="s">S</option>
             <option value="m">M</option>
@@ -47,7 +49,7 @@
 
         <div>
           <label for="delivery-date">Delivery Date</label>
-          <input type="date" />
+          <input type="date" max="2024-11-12" required/>
         </div>
 
         <button type="submit">Submit</button>
