added info to footer

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -60,7 +60,7 @@
   </main>
   <footer>
     Donara Blanc
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By a collective mind</h2>
   </footer>
 </body>
 
