--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -16,19 +16,19 @@
         <article class="first-article">
             <h2>What is Git?</h2>
             <p>Git is a distributed version control system that helps track changes in source code during software development.</p>
-            <a href="#">Read more</a>
+            <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read more</a>
         </article>
 
         <article>
             <h2>Why Do Developers Need Git?</h2>
             <p>Git enables multiple developers to collaborate on the same project and tracks the history of changes for better project management.</p>
-            <a href="#">Read more</a>
+            <a href="https://www.nobledesktop.com/learn/git/what-is-git" target="_blank">Read more</a>
         </article>
 
         <article>
             <h2>What is a Branch in Git?</h2>
             <p>A branch in Git represents an independent line of development, allowing developers to work on features separately.</p>
-            <a href="#">Read more</a>
+            <a href="https://www.w3schools.com/git/git_branch.asp" target="_blank">Read more</a>
         </article>
     </section>
 </main>
